# topology_optimization

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  densities.txt
src/: application.cpp  application.hpp  context.cpp  context.hpp  extract_mesh.py  fea.cpp  fea.hpp  imgui_config.h  linear_elasticity_2d.py  linear_elasticity_3d.py  main.cpp  mesh.py  ngsolve_test.py  optimize.ipynb  optimize.py  poisson.py  standalone.py  utility.cpp  utility.hpp
src/python/: poisson.py
